Add Prettier configuration file for consistent code formatting

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,28 +7,47 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint src --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "deps:check": "depcheck",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "axios": "^1.7.9",
+    "laravel-echo": "^1.16.1",
+    "pinia": "^2.2.8",
+    "pusher-js": "^8.4.0-rc2",
     "vue": "^3.5.20",
     "vue-router": "^4.4.5",
-    "pinia": "^2.2.8",
-    "axios": "^1.7.9",
-    "vuetify": "^3.7.6",
-    "@mdi/font": "^7.4.47",
-    "laravel-echo": "^1.16.1",
-    "pusher-js": "^8.4.0-rc2"
+    "vuetify": "^3.7.6"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.10.2",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/eslint-plugin": "^1.4.3",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.7.0",
+    "depcheck": "^1.4.7",
+    "eslint": "^9.18.0",
+    "eslint-plugin-oxlint": "^1.29.0",
+    "eslint-plugin-playwright": "^2.3.0",
+    "eslint-plugin-sonarjs": "^3.0.5",
+    "eslint-plugin-vue": "^10.5.1",
+    "prettier": "^3.6.2",
+    "sass": "^1.83.4",
     "typescript": "^5.7.3",
     "vite": "^6.0.7",
-    "vue-tsc": "^2.2.0",
-    "eslint": "^9.18.0",
     "vite-plugin-vuetify": "^2.0.4",
-    "sass": "^1.83.4"
+    "vue-tsc": "^2.2.0"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
