--- a/infra/frontend/nginx/default.conf
+++ b/infra/frontend/nginx/default.conf
@@ -32,7 +32,7 @@ server {
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     
     # Content Security Policy - Allow unsafe-eval for Vite source maps (local development)
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://localhost:8443 wss://localhost:8443;" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://localhost:8443 wss://localhost:8443 wss://*.pusher.com;" always;
 
     # Gzip compression
     gzip on;
