Update environment configuration and enhance broadcasting setup
- Remove backup .env file
- Update APP_KEY and APP_URL in .env.example
- Add broadcasting routes in API routes
- Improve logging messages in DashboardLayout.vue

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,9 @@
 # Application
 APP_NAME=MiniWallet
 APP_ENV=local
-APP_KEY=base64:0GqXPzD2m4XXu6ZGw8dwaRMqw9qS2QOd7DF17xCxNGg=
+APP_KEY=base64:tbAlGzM7EM5GHDcl0BKZLUiCVdf7qh8k/TRYSGJ08uY=
 APP_DEBUG=true
-APP_URL=http://localhost:3000
+APP_URL=https://localhost:8443
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
